# cairn

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
agents/: taxonomer-explode.md  taxonomer-verify.md  taxonomer.md
cairn-cli/: Cargo.toml
cairn-cli/src/: main.rs
cairn-core/: Cargo.toml
cairn-core/src/: client.rs  db.rs  error.rs  lib.rs  ops.rs  prime.rs  protocol.rs  rpc.rs  schema.surql  search.rs  snapshot.rs  types.rs
cairn-mcp/: Cargo.toml
cairn-mcp/src/: main.rs
cairn-server/: Cargo.toml
cairn-server/src/: main.rs
cairn-server/tests/: concurrent_clients.rs
cairn-tui/: Cargo.toml
cairn-tui/src/: app.rs  handlers.rs  main.rs  overlays.rs  palette.rs  render.rs
hooks/: cairn_precompact_hook.sh  cairn_save_hook.sh
