[workspace]
resolver = "2"
members = ["cairn-core", "cairn-mcp", "cairn-cli", "cairn-tui", "cairn-server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michal Frdlik"]
repository = "https://github.com/apology-is-policy/cairn"

[workspace.dependencies]
# Database
surrealdb = { version = "2", features = ["kv-surrealkv", "kv-mem"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"
