[package]
name = "cairn-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
cairn-core = { path = "../cairn-core" }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
