[package]
name = "cairn-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cairn-core = { path = "../cairn-core" }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
