[package]
name = "cairn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cairn-core = { path = "../cairn-core" }
clap = { workspace = true }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
uuid = { workspace = true }
