[package]
name = "cairn-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
cairn-core = { path = "../cairn-core" }
chrono = { workspace = true }
clap = { workspace = true }
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
uuid = { workspace = true }
